# BlindfoldChessCouch

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/program/blindfoldchesscouch/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: easy_puzzles.json  hard_puzzles.json  medium_puzzles.json
app/src/main/java/com/program/blindfoldchesscouch/: MainActivity.kt
app/src/main/java/com/program/blindfoldchesscouch/engine/: SunfishEngine.kt
app/src/main/java/com/program/blindfoldchesscouch/model/: Board.kt  Game.kt  Module1Models.kt  Module2Puzzle.kt  Move.kt  MoveGenerator.kt  Piece.kt  Puzzle.kt  Square.kt  TutorialData.kt  TutorialModels.kt
app/src/main/java/com/program/blindfoldchesscouch/navigation/: AppNavigation.kt  TrainingModules.kt
app/src/main/java/com/program/blindfoldchesscouch/sound/: SoundManager.kt
app/src/main/java/com/program/blindfoldchesscouch/tts/: TtsHelper.kt
app/src/main/java/com/program/blindfoldchesscouch/util/: AdvancedQuizGenerator.kt  (+4 more)
app/src/main/res/drawable/: block.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/program/blindfoldchesscouch/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle.kts
nativelib/src/androidTest/java/com/program/nativelib/: ExampleInstrumentedTest.kt
nativelib/src/main/cpp/: CMakeLists.txt  nativelib.cpp
nativelib/src/main/java/com/program/nativelib/: NativeLib.kt
nativelib/src/test/java/com/program/nativelib/: ExampleUnitTest.kt
(+19 files in other folders)
